# community-agents

./: .gitignore  README.md  eslint.config.mjs  langgraph.json  package.json  tsconfig.json
.claude/: CLAUDE.md
agents/Yield-Optimization-Agent/: .gitignore  API_DOCUMENTATION.md  README.md  Yield-Agent-API.postman_collection.json  eslint.config.mjs  package.json  test-api.ts  tsconfig.json
agents/coingecko-agent/: README.md
agents/defi-risk-scanner/: .env.example  LICENSE  README.md  langgraph.json  package.json
agents/hyperliquid-agent/: .env.example  (+4 more)
agents/yield-intelligence-agent/: .env.example  README.md  langgraph.json  pyproject.toml
agents/yield-intelligence-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/yield-intelligence-agent/src/yield_agent/: __init__.py  graph.py  state.py
agents/yield-intelligence-agent/src/yield_agent/nodes/: __init__.py  input_parser.py  ranking_engine.py  response_formatter.py  route_finder.py  yield_fetcher.py
agents/yield-intelligence-agent/src/yield_agent/tools/: __init__.py  defillama_client.py  gas_client.py  lifi_client.py
agents/yield-intelligence-agent/tests/: test_agent.py
docs/: Get started with LangGraph Agents.md  README.md  deploy-an-agent.md  get-started-with-langgraph.md  langgraph-quick-start-py.md  langgraph-quick-start.md
examples/: .gitignore  README.md  eslint.config.mjs  package.json  tsconfig.json
web3-events-radar/: README.md  agent.js  agent.json  package.json  test.js
(+150 files in other folders)
